# DesignPattern

./: .gitignore
code/Behavior/ChainOfResponsibility/: OddSupport.h  README.md  Support.h  main.cpp
code/Create/AbstractFactory/: IFactory.h  README.md  main.cpp
code/Create/Builder/: Director.h  README.md  main.cpp
code/Create/FactoryMethod/: IDCard.h  IDCardFactory.h  IFactory.h  README.md
code/Create/Prototype/: MessageBox.h  README.md  main.cpp
code/Create/Singleton/: README.md
code/Struct/: CMakeLists.txt
code/Struct/Adapter_01/: README.md  main.cpp
code/Struct/Bridge/: CountDisplay.h  Display.h  README.md  main.cpp
code/Struct/Composite/: Directory.h  Entry.h  File.h  README.md  main.cpp
code/Struct/Decorator/: README.md  main.cpp
code/Struct/Facade/: Database.h  HtmlWriter.h  PageMaker.h  README.md  main.cpp
code/Struct/FlyWeight/: BigChar.h  BigCharFactory.h  BigCharImpl.h  README.md  main.cpp
code/Struct/Proxy/: README.md  main.cpp
